# manifold

./: .gitignore  .gitmodules  .jjignore  .manifold.settings.json  .tulpa-memory.md  AGENTS.md  CLAUDE_THOUGHTS_LOOPER.md  CMakeLists.txt  CMakePresets.json  EFFECTS_ROADMAP.md  LOOPER_PLAN.md  LooperCMakeLists.txt  LooperHeadless.cpp  LooperLayer.h  LooperProcessor.cpp  LooperProcessor.h  README.md  agent_handbook.md  debug_dsp.gdb  example.manifold.settings.json  imgui.ini
GrainFreeze_Prototype/: README.md
agent-docs/: 260329_midisynth_architecture_refactor.md  260330_fx_definitions_extraction_plan.md  260330_hosted_project_architecture.md  260330_modular_rack_audio_patching_working_doc.md  260330_modulation_engine_architecture_worksheet.md  260401_midi_keyboard_dock_rework_plan.md  260419_simd_porting_guide.md  ARCHITECTURAL_AUDIT_WEEK2.md  CRUFT_AND_CLEANUP_INVENTORY.md  DOCUMENT_AUDIT_MASTER_ANALYSIS.md  DSP_SCRIPTING_PLAN.md  E2E_TESTING_AND_PERFORMANCE_PROFILING_SPEC.md  EDITOR_AUTHORING_AND_SOURCE_OF_TRUTH_DISCUSSION.md  EDITOR_FIRST_PASS_IMPLEMENTATION_CHARTER.md  EDITOR_FIRST_PASS_WORK_PLAN.md  EDITOR_PROJECT_FORMAT_AND_AUTHORING_SPEC.md  EDITOR_SYSTEM_OVERVIEW.md  EDITOR_UI_WORKING_DOC.md  EFFECTS_ROADMAP.md  EXPECTED_APP_BEHAVIOR_TESTING_WORKPLAN.md  IMGUI_CANVAS_DEPENDENCY_AUDIT_UPDATED.md  IMGUI_COMPONENT_SYSTEM_PLAN.md  IMGUI_MIGRATION_WORKPLAN.md  IMGUI_RENDERER_MIGRATION_PLAN.md  LEGACY_DRAW_REPLAY_REMOVAL_PLAN.md  LEGACY_REMOVAL.md  LOOPERSYNTHTABS_MIDISYNTH_SAMPLE_MODES_FINDINGS.md  README.md  (+12 more)
dsp_simd_test/TestNodesApp/: CMakeLists.txt  main.cpp
(+747 files in other folders)
